--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGO_URL=mongodb://localhost:27017/chatapp
-JWT_SECRET=your_super_secret_jwt_key_here
+MONGO_URL=mongodb+srv://testUser:8uc7HTUvEALSw_f@cluster0.acdgfi6.mongodb.net/
+JWT_SECRET=CHAT_APP_JC
 PORT=3000
