--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.8",
+    "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.10",
     "expo-splash-screen": "~31.0.10",
@@ -30,6 +31,7 @@
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "~15.0.8",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "phosphor-react-native": "^3.0.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
