--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,10 @@
     "axios": "^1.12.2",
     "expo": "~54.0.12",
     "expo-constants": "~18.0.9",
+    "expo-dev-client": "~6.0.13",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.8",
+    "expo-image": "~3.0.9",
     "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.10",
@@ -32,7 +33,6 @@
     "expo-web-browser": "~15.0.8",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
-    "phosphor-react-native": "^3.0.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
